fix: Error that arose when data length was removed, custom messages in the pills cause overflow, now using flex to fix this
Jira Issue DD-1653

Sync to source repo @73cad53e1aa14339fd9253f61b6af61942398a54

--- a/css/searchPanes.dataTables.css
+++ b/css/searchPanes.dataTables.css
@@ -318,14 +318,19 @@ div.dtsp-panesContainer div.dtsp-searchPanes div.dtsp-searchPane div.dataTables_
 }
 div.dtsp-panesContainer div.dtsp-searchPanes div.dtsp-searchPane div.dataTables_scrollBody div.dtsp-nameCont {
   width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-content: flex-start;
+  align-items: flex-start;
 }
 div.dtsp-panesContainer div.dtsp-searchPanes div.dtsp-searchPane div.dataTables_scrollBody div.dtsp-nameCont span.dtsp-name {
   text-overflow: ellipsis;
   overflow: hidden;
   display: inline-block;
-  width: calc(100% - 42px);
   vertical-align: middle;
   white-space: nowrap;
+  flex-grow: 1;
 }
 div.dtsp-panesContainer div.dtsp-searchPanes div.dtsp-searchPane div.dataTables_scrollBody div.dtsp-nameCont span.dtsp-pill {
   display: inline-block;
